fix spacing above calendar row on mobile

--- a/resources/sass/_header.scss
+++ b/resources/sass/_header.scss
@@ -56,7 +56,10 @@
     }
 
     .subheader .cnt {
-        margin-bottom: -1rem;
+        margin-bottom: 0.5rem;
+        @include media-breakpoint-up(md) {
+          margin-bottom: -1rem;
+        }
         padding: 2rem 1rem;
         transform: translate(-0.5rem, -0.5rem);
         background-image: url('/images/perex.png');
